@@ -9,6 +9,8 @@
     * Change sort order of software items. Installed items are at bottom.
     * Support for saving and loading installed software items.
     * Display less indent in "print computer information" dialog.
+    * Change the introduction text of /apps/update-notifier/auto_launch
+    * Support for disabling GNOME login sound
 
 2010-07-23 Homer Xing <homer.xing@gmail.com>
 
